# multigit

./: .pre-commit-config.yaml  README.md  multigit.py  pyproject.toml
docker/: Dockerfile
src/multigit/: main.py
src/totaliterm/: main.py
