[project]
authors = [{name = "Taka", email = "amano.takahisa@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "multigit"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
multigit = "multigit.main:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
multigit = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.pyright]
venvPath = "."
venv = "venv"
